Began improving clustering of clusters

--- a/ClusteringClusters.ipynb
+++ b/ClusteringClusters.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3e8b90df-e0e7-4e3a-9cd3-35d9f186cc9f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3f5257db-00c6-4417-beb0-241f464e6161",
    "metadata": {},
    "outputs": [
@@ -60,14 +60,14 @@
        "      <th>Location_o</th>\n",
        "      <th>Main_Stree</th>\n",
        "      <th>...</th>\n",
+       "      <th>Work_Zone_</th>\n",
+       "      <th>Work_Zon_1</th>\n",
        "      <th>Work_Zon_2</th>\n",
        "      <th>Workers_Pr</th>\n",
        "      <th>Zone_ID</th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
-       "      <th>latitude_r</th>\n",
-       "      <th>longitude_</th>\n",
        "      <th>cluster</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -87,13 +87,13 @@
        "      <td>1600 BLK GENERAL BOOTH BOULEVARD</td>\n",
        "      <td>...</td>\n",
        "      <td>None</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>na</td>\n",
        "      <td>1</td>\n",
        "      <td>36.785572</td>\n",
        "      <td>-75.998705</td>\n",
-       "      <td>0.642029</td>\n",
-       "      <td>-1.326428</td>\n",
        "      <td>0</td>\n",
        "      <td>POINT (-75.99871 36.78557)</td>\n",
        "    </tr>\n",
@@ -111,13 +111,13 @@
        "      <td>5670 INDIAN RIVER RD</td>\n",
        "      <td>...</td>\n",
        "      <td>None</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>na</td>\n",
        "      <td>2</td>\n",
        "      <td>36.805590</td>\n",
        "      <td>-76.190396</td>\n",
-       "      <td>0.642379</td>\n",
-       "      <td>-1.329773</td>\n",
        "      <td>1</td>\n",
        "      <td>POINT (-76.19040 36.80559)</td>\n",
        "    </tr>\n",
@@ -135,13 +135,13 @@
        "      <td>700 GREAT NECK RD</td>\n",
        "      <td>...</td>\n",
        "      <td>None</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>na</td>\n",
        "      <td>3</td>\n",
        "      <td>36.852291</td>\n",
        "      <td>-76.048317</td>\n",
-       "      <td>0.643194</td>\n",
-       "      <td>-1.327294</td>\n",
        "      <td>2</td>\n",
        "      <td>POINT (-76.04832 36.85229)</td>\n",
        "    </tr>\n",
@@ -159,43 +159,43 @@
        "      <td>100 BLOCK LONDON BRIDGE</td>\n",
        "      <td>...</td>\n",
        "      <td>None</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>na</td>\n",
        "      <td>4</td>\n",
        "      <td>36.841992</td>\n",
        "      <td>-76.049118</td>\n",
-       "      <td>0.643014</td>\n",
-       "      <td>-1.327307</td>\n",
        "      <td>3</td>\n",
        "      <td>POINT (-76.04912 36.84199)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020/01/06 19:35:00+00</td>\n",
-       "      <td>1935</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>2020/01/08 16:36:00+00</td>\n",
+       "      <td>1636</td>\n",
+       "      <td>300 Feet From</td>\n",
        "      <td>2.020001e+09</td>\n",
        "      <td>VIRGINIA BEACH</td>\n",
-       "      <td>MON</td>\n",
-       "      <td>FOUR APPROACHES</td>\n",
-       "      <td>DARKNESS-ROAD LIGHTED</td>\n",
+       "      <td>WED</td>\n",
+       "      <td>NOT AT INTERSECTION</td>\n",
+       "      <td>DUSK</td>\n",
        "      <td>ON ROADWAY</td>\n",
-       "      <td>LYNNHAVEN PKWY</td>\n",
+       "      <td>2400 BLK N. LANDING RD</td>\n",
        "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NO</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>na</td>\n",
-       "      <td>5</td>\n",
-       "      <td>36.795086</td>\n",
-       "      <td>-76.117327</td>\n",
-       "      <td>0.642195</td>\n",
-       "      <td>-1.328498</td>\n",
+       "      <td>6</td>\n",
+       "      <td>36.751716</td>\n",
+       "      <td>-76.053755</td>\n",
        "      <td>4</td>\n",
-       "      <td>POINT (-76.11733 36.79509)</td>\n",
+       "      <td>POINT (-76.05376 36.75172)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -204,40 +204,40 @@
        "1  2020/01/04 00:00:00+00        1505            Yes  2.020000e+09   \n",
        "2  2020/01/06 00:00:00+00         815   50 Feet From  2.020001e+09   \n",
        "3  2020/01/07 19:15:00+00        1915  150 Feet From  2.020001e+09   \n",
-       "4  2020/01/06 19:35:00+00        1935            Yes  2.020001e+09   \n",
+       "4  2020/01/08 16:36:00+00        1636  300 Feet From  2.020001e+09   \n",
        "\n",
        "             City Day_of_Wee           Intersecti             Light_Cond  \\\n",
        "0  VIRGINIA BEACH        FRI  NOT AT INTERSECTION  DARKNESS-ROAD LIGHTED   \n",
        "1  VIRGINIA BEACH        SAT  NOT AT INTERSECTION               DAYLIGHT   \n",
        "2  VIRGINIA BEACH        MON  NOT AT INTERSECTION               DAYLIGHT   \n",
        "3  VIRGINIA BEACH        TUE      FOUR APPROACHES  DARKNESS-ROAD LIGHTED   \n",
-       "4  VIRGINIA BEACH        MON      FOUR APPROACHES  DARKNESS-ROAD LIGHTED   \n",
+       "4  VIRGINIA BEACH        WED  NOT AT INTERSECTION                   DUSK   \n",
        "\n",
-       "   Location_o                        Main_Stree  ... Work_Zon_2  Workers_Pr  \\\n",
-       "0  ON ROADWAY  1600 BLK GENERAL BOOTH BOULEVARD  ...       None        None   \n",
-       "1  ON ROADWAY              5670 INDIAN RIVER RD  ...       None        None   \n",
-       "2  ON ROADWAY                 700 GREAT NECK RD  ...       None        None   \n",
-       "3  ON ROADWAY           100 BLOCK LONDON BRIDGE  ...       None        None   \n",
-       "4  ON ROADWAY                    LYNNHAVEN PKWY  ...       None        None   \n",
+       "   Location_o                        Main_Stree  ... Work_Zone_  Work_Zon_1  \\\n",
+       "0  ON ROADWAY  1600 BLK GENERAL BOOTH BOULEVARD  ...       None          NO   \n",
+       "1  ON ROADWAY              5670 INDIAN RIVER RD  ...       None          NO   \n",
+       "2  ON ROADWAY                 700 GREAT NECK RD  ...       None          NO   \n",
+       "3  ON ROADWAY           100 BLOCK LONDON BRIDGE  ...       None          NO   \n",
+       "4  ON ROADWAY            2400 BLK N. LANDING RD  ...       None          NO   \n",
        "\n",
-       "  Zone_ID OBJECTID   latitude  longitude latitude_r longitude_ cluster  \\\n",
-       "0      na        1  36.785572 -75.998705   0.642029  -1.326428       0   \n",
-       "1      na        2  36.805590 -76.190396   0.642379  -1.329773       1   \n",
-       "2      na        3  36.852291 -76.048317   0.643194  -1.327294       2   \n",
-       "3      na        4  36.841992 -76.049118   0.643014  -1.327307       3   \n",
-       "4      na        5  36.795086 -76.117327   0.642195  -1.328498       4   \n",
+       "  Work_Zon_2 Workers_Pr Zone_ID OBJECTID   latitude  longitude cluster  \\\n",
+       "0       None       None      na        1  36.785572 -75.998705       0   \n",
+       "1       None       None      na        2  36.805590 -76.190396       1   \n",
+       "2       None       None      na        3  36.852291 -76.048317       2   \n",
+       "3       None       None      na        4  36.841992 -76.049118       3   \n",
+       "4       None       None      na        6  36.751716 -76.053755       4   \n",
        "\n",
        "                     geometry  \n",
        "0  POINT (-75.99871 36.78557)  \n",
        "1  POINT (-76.19040 36.80559)  \n",
        "2  POINT (-76.04832 36.85229)  \n",
        "3  POINT (-76.04912 36.84199)  \n",
-       "4  POINT (-76.11733 36.79509)  \n",
+       "4  POINT (-76.05376 36.75172)  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
+   "id": "f7bbe189-b88b-4cc1-afea-67d96ea39487",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_28636\\1137853285.py:1: DtypeWarning: Columns (12,29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  old_df = pd.read_csv(\"data/FINAL_Police_Traffic_Crash_Reports.csv\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Accident_Date', 'Accident_Time', 'At_Intersection', 'CASE_Number',\n",
+       "       'City', 'Day_of_Week', 'Intersection_Type', 'Light_Conditions',\n",
+       "       'Location_of_First_Harmful_Event', 'Main_Street', 'Nearest_Street',\n",
+       "       'Number_of_Vehicles_Involved', 'Precinct', 'Relation_to_Roadway',\n",
+       "       'Roadway_Alignment', 'Roadway_defects', 'Roadway_Description',\n",
+       "       'Roadway_Surface_Condition', 'Roadway_Surface_type', 'School_Zone',\n",
+       "       'State', 'Traffic_Control_Device', 'Traffic_Control_Type',\n",
+       "       'Type_of_Collision', 'Weather_Condition', 'Work_Zone_Location',\n",
+       "       'Work_Zone_Related', 'Work_Zone_Type', 'Workers_Present_in_Work_Zone',\n",
+       "       'Zone_ID', 'OBJECTID', 'latitude', 'longitude', 'cluster', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_df = pd.read_csv(\"data/FINAL_Police_Traffic_Crash_Reports.csv\")\n",
+    "columns = list(old_df.columns)\n",
+    "columns.append(\"cluster\")\n",
+    "columns.append(\"geometry\")\n",
+    "gdf.columns = columns\n",
+    "gdf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "6e69981e-5b5b-4b24-bd57-de8360316643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Roadway_Alignment\n",
+       "STRAIGHT-LEVEL        11381\n",
+       "CURVE-LEVEL             834\n",
+       "GRADE-CURVE              52\n",
+       "GRADE-STRAIGHT           46\n",
+       "OTHER                    20\n",
+       "HILLCREST-STRAIGHT       18\n",
+       "ON/OFF RAMP              13\n",
+       "HILLCREST-CURVE           8\n",
+       "DIP-STRAIGHT              6\n",
+       "DIP-CURVE                 1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf[\"Roadway_Alignment\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "caaa072d-7019-4b81-a5bd-37a5cc32e3cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Averaging times\n",
+    "# https://stackoverflow.com/questions/12033905/using-python-to-create-an-average-out-of-a-list-of-times\n",
+    "\n",
+    "import datetime\n",
+    "import math\n",
+    "import numpy\n",
+    "\n",
+    "# Adapted method\n",
+    "def number_to_radians(x):\n",
+    "    hour = x // 100\n",
+    "    minute = x % 100\n",
+    "    seconds_from_midnight = 3600 * hour + 60 * minute\n",
+    "    radians = float(seconds_from_midnight) / float(12 * 60 * 60) * 2.0 * math.pi\n",
+    "    return radians\n",
+    "\n",
+    "def datetime_to_radians(x):\n",
+    "    # radians are calculated using a 24-hour circle, not 12-hour, starting at north and moving clockwise\n",
+    "    time_of_day = x.time()\n",
+    "    seconds_from_midnight = 3600 * time_of_day.hour + 60 * time_of_day.minute + time_of_day.second\n",
+    "    radians = float(seconds_from_midnight) / float(12 * 60 * 60) * 2.0 * math.pi\n",
+    "    return radians\n",
+    "\n",
+    "def average_angle(angles):\n",
+    "    # angles measured in radians\n",
+    "    x_sum = numpy.sum([math.sin(x) for x in angles])\n",
+    "    y_sum = numpy.sum([math.cos(x) for x in angles])\n",
+    "    x_mean = x_sum / float(len(angles))\n",
+    "    y_mean = y_sum / float(len(angles))\n",
+    "    return numpy.arctan2(x_mean, y_mean)\n",
+    "\n",
+    "def radians_to_time_of_day(x):\n",
+    "    # radians are measured clockwise from north and represent time in a 24-hour circle\n",
+    "    seconds_from_midnight = int(float(x) / (2.0 * math.pi) * 12.0 * 60.0 * 60.0)\n",
+    "    return seconds_from_midnight % (60 * 60 * 24)\n",
+    "    # hour = (seconds_from_midnight // 3600) % 24\n",
+    "    # minute = (seconds_from_midnight % 3600) // 60\n",
+    "    # second = seconds_from_midnight % 60\n",
+    "    # return datetime.time(hour, minute, second)\n",
+    "\n",
+    "def average_times_of_day(x):\n",
+    "    # input datetime.datetime array and output datetime.time value\n",
+    "    angles = [number_to_radians(y) for y in x]\n",
+    "    avg_angle = average_angle(angles)\n",
+    "    return radians_to_time_of_day(avg_angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "35c2c1f1-d1eb-4c05-8efc-1a13f88fb790",
    "metadata": {},
    "outputs": [
@@ -275,11 +404,9 @@
        "      <th></th>\n",
        "      <th>num_of_accidents</th>\n",
        "      <th>avg_accident_time</th>\n",
-       "      <th>most_common_day</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cluster</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -288,83 +415,73 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30</td>\n",
-       "      <td>1563.200000</td>\n",
-       "      <td>FRI</td>\n",
+       "      <td>66557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1559.500000</td>\n",
-       "      <td>SAT</td>\n",
+       "      <td>13170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8</td>\n",
-       "      <td>1458.375000</td>\n",
-       "      <td>MON</td>\n",
+       "      <td>65864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>29</td>\n",
-       "      <td>1297.413793</td>\n",
-       "      <td>THU</td>\n",
+       "      <td>17661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>255</td>\n",
-       "      <td>1444.949020</td>\n",
-       "      <td>FRI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2</td>\n",
-       "      <td>1390.500000</td>\n",
-       "      <td>WED</td>\n",
+       "      <td>12300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>366</td>\n",
-       "      <td>1320.158470</td>\n",
-       "      <td>FRI</td>\n",
+       "      <td>54</td>\n",
+       "      <td>10344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1505.000000</td>\n",
-       "      <td>THU</td>\n",
+       "      <td>1</td>\n",
+       "      <td>78060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>53</td>\n",
-       "      <td>1495.245283</td>\n",
-       "      <td>THU</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1</td>\n",
-       "      <td>941.000000</td>\n",
-       "      <td>SAT</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16507</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         num_of_accidents  avg_accident_time most_common_day\n",
-       "cluster                                                     \n",
-       "0                      30        1563.200000             FRI\n",
-       "1                       2        1559.500000             SAT\n",
-       "2                       8        1458.375000             MON\n",
-       "3                      29        1297.413793             THU\n",
-       "4                     255        1444.949020             FRI\n",
-       "5                       2        1390.500000             WED\n",
-       "6                     366        1320.158470             FRI\n",
-       "7                       2        1505.000000             THU\n",
-       "8                      53        1495.245283             THU\n",
-       "9                       1         941.000000             SAT"
+       "         num_of_accidents  avg_accident_time\n",
+       "cluster                                     \n",
+       "0                      30              66557\n",
+       "1                       2              13170\n",
+       "2                       8              65864\n",
+       "3                      29              17661\n",
+       "4                       2               7829\n",
+       "5                       2              12300\n",
+       "6                      54              10344\n",
+       "7                       1              78060\n",
+       "8                      18               6358\n",
+       "9                       7              16507"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,8 +490,8 @@
     "# https://stackoverflow.com/questions/15222754/groupby-pandas-dataframe-and-select-most-common-value\n",
     "info_from_cluster = gdf.groupby('cluster').agg(\n",
     "    num_of_accidents=('cluster', 'size'),  # get the count\n",
-    "    avg_accident_time=('Accident_T', 'mean'),  # avg time\n",
-    "    most_common_day=('Day_of_Wee', lambda x: x.value_counts().index[0]), # most common day\n",
+    "    avg_accident_time=('Accident_Time', average_times_of_day),  # avg time (seconds from midnight)\n",
+    "    # most_common_day=('Day_of_Week', lambda x: x.value_counts().index[0]), # most common day\n",
     ")\n",
     "\n",
     "info_from_cluster.head(10)"
